clean up tests
- remove SystemRules stuff from IT tests
- should only use the run_IT_tests.sh scripts, these sets and unsets correct env vars
- cleaned up the pom
- updated to allow some reflection stuff in tests by the test-frameworks
- cleaned up the unit tests (i.e. non-dependent on servers)